--- a/team.css
+++ b/team.css
@@ -182,14 +182,13 @@ body {
   padding: 25px 20px;
   margin-bottom: 0;
   width: 100%;
-  transition: transform 0.1s ease-out;
+  transition: transform 0.1s;
   -o-object-fit: cover;
      object-fit: cover;
   height: auto;
 }
 
 .card:hover {
-  transition: all 2s ease;
   transform: scale(1.03);
   box-shadow: -0.5px -0.5px 0.5px rgba(255, 255, 255, 0.25), 5px 5px 20px rgba(255, 255, 255, 0.1);
 }
