--- a/team.scss
+++ b/team.scss
@@ -151,13 +151,13 @@
      padding: 25px 20px;
      margin-bottom: 0;
      width: 100%;
-     transition: transform .1s ease-out;
+     transition: transform .1s;
      object-fit: cover;
      height: auto;
   }
   
   .card:hover {
-     transition: all 2s ease;
+    
   transform: scale(1.03);
      box-shadow: -.5px -.5px .5px rgba(255, 255, 255, 0.25), 5px 5px 20px rgba(255, 255, 255, 0.1);
   }
