--- a/team.scss
+++ b/team.scss
@@ -129,10 +129,13 @@
     padding:0 50px 50px;
   }
   .card-container {
-     display: grid;
+     display: none;
      grid-template-columns: 1fr;
      justify-self: center;
     gap:5em;
+    &.active{
+      display: grid;
+    }
   }
   
   .card {
@@ -189,7 +192,7 @@
   }
   
   .club_title {
-     font-size: 11px;
+     font-size: 12px;
      font-weight: 600;
      color: #65F3AC;
   
