--- a/style.css
+++ b/style.css
@@ -6,6 +6,79 @@
   box-sizing: border-box;
 }
 
+.vmcard {
+  display: none;
+  color: white;
+  width: 75%;
+  height: 70%;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 10px;
+  border: 2px solid silver;
+  z-index: 3;
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+}
+
+.vmcard-body {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  transform: translate(-50%, -50%);
+  z-index: 3;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.vmcard-title {
+  display: flex;
+  justify-content: center;
+  margin: 3% 0;
+}
+
+.vmcard-text {
+  font-size: 25px;
+  margin: 30px;
+  text-align: justify;
+}
+
+.vmbttn {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+  align-items: center;
+  margin: -15px;
+}
+
+.vmbtn {
+  background: #f36565;
+  padding: 10px 25px;
+  border: none;
+  border-radius: 10px;
+  font-size: 15px;
+  color: black;
+  text-decoration: none;
+  z-index: 3;
+  transition: ease 0.5s;
+}
+
+.vmbtn:hover {
+  transform: scale(1.1);
+}
+
+.vmcard-img {
+  z-index: 3;
+  background-color: #2d2f33;
+  filter: blur(28px);
+  -webkit-filter: blur(28px);
+  height: 100%;
+  width: 100%;
+}
+
 ::-webkit-scrollbar {
   width: 8px;
 }
@@ -836,12 +909,20 @@ footer .copyright span {
   }
 }
 @media screen and (min-width: 600px) {
+  .vmbttn {
+    font-size: 18px;
+    text-align: center;
+  }
   .our_club .club_navigator {
     display: flex;
     justify-content: space-between;
   }
 }
 @media screen and (max-width: 768px) {
+  .vmbttn {
+    font-size: 20px;
+    text-align: center;
+  }
   .navbar .navbar-nav .nav-link {
     margin-left: 2em !important;
   }
