--- a/event.css
+++ b/event.css
@@ -52,9 +52,10 @@ body {
 }
 
 .modal-left {
-  /* background-color: red; */
+  background-color: #3e3e3e;
   width: 100%;
   display: flex;
+  justify-content: center;
   position: relative;
 }
 
